// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AllocatedWorkers component should render properly - with deallocate button 1`] = `
<DocumentFragment>
  <div>
    <div
      class="lbh-table-header"
    >
      <h3
        class="govuk-fieldset__legend--m govuk-custom-text-color govuk-!-margin-top-0"
      >
        ALLOCATED WORKER 1
      </h3>
      <button
        class="govuk-button govuk-button--secondary"
        data-module="govuk-button"
      >
        Deallocate Worker
      </button>
    </div>
    <hr
      class="govuk-divider"
    />
    <div />
    <dl
      class="govuk-summary-list"
    >
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Allocated worker:
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          Officer Name
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Allocated team
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          Safeguarding and Reviewing Team
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Role
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          Consultant Social Worker
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Start date
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          28/03/2019
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          End date
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          28/03/2019
        </dd>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;

exports[`AllocatedWorkers component should render properly 1`] = `
<DocumentFragment>
  <div>
    <div
      class="lbh-table-header"
    >
      <h3
        class="govuk-fieldset__legend--m govuk-custom-text-color govuk-!-margin-top-0"
      >
        ALLOCATED WORKER 1
      </h3>
    </div>
    <hr
      class="govuk-divider"
    />
    <div />
    <dl
      class="govuk-summary-list"
    >
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Allocated worker:
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          Officer Name
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Allocated team
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          Safeguarding and Reviewing Team
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Role
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          Consultant Social Worker
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          Start date
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          28/03/2019
        </dd>
      </div>
      <div
        class="govuk-summary-list__row"
      >
        <dt
          class="govuk-summary-list__key"
        >
          End date
        </dt>
        <dd
          class="govuk-summary-list__value"
        >
          28/03/2019
        </dd>
      </div>
    </dl>
  </div>
</DocumentFragment>
`;
